feat: change package.json name field

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ppfish",
+  "name": "ppfish-fork",
   "version": "2.2.0",
   "description": "fish design ui components",
   "scripts": {
