feat: 接入workflow release-publish

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lint-fix": "npm run lint-fix:script && npm run lint-fix:style",
     "lint-fix:script": "npm run lint:script -- --fix",
     "lint-fix:style": "npm run lint:style -- --fix",
+    "release": "node scripts/release.js",
     "pub": "npm publish ./lib",
     "pub:alpha": "npm publish ./lib --tag alpha",
     "pub:dev": "npm publish ./lib --tag dev",
