--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dom": ">=16.9.0"
   },
   "devDependencies": {
+    "@actions/core": "^1.9.1",
     "@babel/cli": "^7.16.0",
     "@babel/core": "^7.16.0",
     "@babel/node": "^7.16.0",
@@ -145,6 +146,7 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^7.0.0",
+    "inquirer": "^8.2.4",
     "jest": "^27.0.3",
     "jest-canvas-mock": "^2.3.1",
     "less": "3.8.1",
