--- a/.github/workflows/preview-site-deploy.yml
+++ b/.github/workflows/preview-site-deploy.yml
@@ -23,10 +23,10 @@ jobs:
           node-version: 14
           registry-url: 'https://registry.npmjs.org'
 
-      - name: 'install and build'
+      - name: 'install and docs:build'
         run: |
           npm install
-          npm run build
+          npm run docs:build
 
       - name: Deploy 🚀 （github pages）
         uses: JamesIves/github-pages-deploy-action@v4.2.5
