--- a/.github/workflows/preview-site-deploy.yml
+++ b/.github/workflows/preview-site-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages # The branch the action should deploy to.
-          folder: docs # The folder the action should deploy.
+          folder: dist/site # The folder the action should deploy.
 
       - name: get version
         id: predeploy
@@ -41,4 +41,4 @@ jobs:
       - name: 'deploy surge'
         run: |
           export DEPLOY_DOMAIN=https://preview-${{ steps.predeploy.outputs.version }}-shockingsrose.surge.sh
-          npx surge --project ./docs --domain $DEPLOY_DOMAIN --token ${{ secrets.SURGE_TOKEN }}
+          npx surge --project ./dist/site --domain $DEPLOY_DOMAIN --token ${{ secrets.SURGE_TOKEN }}
