--- a/.github/workflows/preview-site-deploy.yml
+++ b/.github/workflows/preview-site-deploy.yml
@@ -1,16 +1,16 @@
 name: Preview Site Deploy
 
-# on:
-#   workflow_run:
-#     workflows: ['release and publish']
-#     types:
-#       - completed
-#   # Allows you to run this workflow manually from the Actions tab
-#   workflow_dispatch:
 on:
-  push:
-    branches:
-      - '2.x'
+  workflow_run:
+    workflows: [release and publish]
+    types:
+      - completed
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+# on:
+#   push:
+#     branches:
+#       - '2.x'
 
 jobs:
   build:
