--- a/.github/workflows/preview-site-deploy.yml
+++ b/.github/workflows/preview-site-deploy.yml
@@ -1,16 +1,17 @@
 name: Preview Site Deploy
 
-on:
-  workflow_run:
-    workflows: [Release Publish]
-    types:
-      - completed
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 # on:
-#   push:
-#     branches:
-#       - '2.x'
+#   workflow_run:
+#     workflows: [Release Publish]
+#     types:
+#       - completed
+#   # Allows you to run this workflow manually from the Actions tab
+#   workflow_dispatch:
+
+on:
+  push:
+    branches:
+      - '2.x'
 
 jobs:
   build:
@@ -28,15 +29,16 @@ jobs:
           npm install
           npm run docs:build
 
+      - name: run predeploy
+        id: predeploy
+        run: npm run predeploy
+
       - name: Deploy 🚀 （github pages）
+        if: ${{ steps.predeploy.outputs.deployGithubPages == 'true' }}
         uses: JamesIves/github-pages-deploy-action@v4.2.5
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: dist/site # The folder the action should deploy.
-
-      - name: get version
-        id: predeploy
-        run: npm run predeploy
 
       - name: 'deploy surge'
         run: |
