--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ppfish-fork",
-  "version": "2.2.12",
+  "version": "2.2.13-alpha.0",
   "description": "fish design ui components",
   "scripts": {
     "dev": "babel-node --max-old-space-size=4096 tools/openSite.js",
