build: 增加shouldRelease，判断是否需要release

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -21,13 +21,14 @@ jobs:
           node-version: 14
           registry-url: 'https://registry.npmjs.org'
 
-      - name: get changelog
+      - name: run predeploy
         id: predeploy
         run: |
           npm install
           npm run predeploy
 
       - name: Create a Release
+        if: ${{ steps.predeploy.outputs.shouldRelease == 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # run: gh release create ${{ steps.package-version.outputs.current-version}} --target master -p
@@ -36,10 +37,10 @@ jobs:
           echo IS_PRERELEASE: $IS_PRERELEASE
           gh release create ${{ steps.predeploy.outputs.version }} --target master $IS_PRERELEASE --notes '${{ steps.predeploy.outputs.changeLog }}'
 
-      - name: 'install and build'
-        run: npm run build
-
       - name: 'npm publish'
+        if: ${{ steps.predeploy.outputs.shouldRelease == 'true' }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm run ${{ steps.predeploy.outputs.pubScript }}
+        run: |
+          npm run build
+          npm run ${{ steps.predeploy.outputs.pubScript }}
